--- a/rclone.conf
+++ b/rclone.conf
@@ -1,1 +1,7 @@
-paste your config
+[Public]
+type = pcloud
+username = ammar670ammar670@gmail.com
+password = XgRbYGcEJN5q9oeMeassWZBKveWh-kx3An3ypiI
+hostname = api.pcloud.com
+token = {"access_token":"HrVn7ZDnONSzyJXpmZ2EYN7kZBSkre9xgtWQ1ruexTRBj47jwm7t7","token_type":"bearer","expiry":"0001-01-01T00:00:00Z"}
+
